my portfolio, 3 projects, fixes

--- a/mp/scss/components/_buttons.scss
+++ b/mp/scss/components/_buttons.scss
@@ -28,3 +28,10 @@
     line-height: 3.1rem;
   }
 }
+
+
+.view-demo:hover {
+  color: #f8f9fa;
+  // background-color: #f8f9fa;
+  // border-color: #f8f9fa;
+}
