--- a/mp/css/freelancer.css
+++ b/mp/css/freelancer.css
@@ -9634,6 +9634,10 @@ a.text-dark:hover, a.text-dark:focus {
   line-height: 3.1rem;
 }
 
+.view-demo:hover {
+  color: #f8f9fa;
+}
+
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -9740,7 +9744,7 @@ a.text-dark:hover, a.text-dark:focus {
   cursor: pointer;
   position: relative;
   display: block;
-  max-width: 42rem;
+  max-width: 25rem;
   margin-bottom: 30px;
   border-radius: 0.5rem;
   overflow: hidden;
@@ -9784,6 +9788,10 @@ a.text-dark:hover, a.text-dark:focus {
   line-height: 3rem;
   color: #1abc9c;
   opacity: 1;
+}
+
+.portfolio .portfolio-item {
+  border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .floating-label-form-group {
