--- a/mp/css/freelancer.css
+++ b/mp/css/freelancer.css
@@ -9605,6 +9605,11 @@ a.text-dark:hover, a.text-dark:focus {
   color: #fff !important;
 }
 
+.divider-long {
+  max-width: 100% !important;
+  margin: 0 !important;
+}
+
 .btn-xl {
   padding: 1rem 1.75rem;
   font-size: 1.25rem;
@@ -9734,6 +9739,14 @@ a.text-dark:hover, a.text-dark:focus {
   .masthead .masthead-subheading {
     font-size: 1.5rem;
   }
+}
+
+.avatar img {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 50%;
+  position: relative;
+  z-index: 100;
+  height: 80%;
 }
 
 .portfolio {
