--- a/mp/scss/layout/_masthead.scss
+++ b/mp/scss/layout/_masthead.scss
@@ -27,3 +27,11 @@
 
   }
 }
+
+.avatar img{
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: 50%;
+  position:relative;
+  z-index:100;
+  
+}
