button link to links; contacts work added

--- a/mp/scss/components/_buttons.scss
+++ b/mp/scss/components/_buttons.scss
@@ -29,6 +29,11 @@
   }
 }
 
+.view-demo-a {
+   font-weight:bolder;
+   font-size:1.2rem;
+   text-transform:uppercase;
+}
 
 .view-demo:hover {
   color: #f8f9fa;
