--- a/mp/css/freelancer.css
+++ b/mp/css/freelancer.css
@@ -9639,6 +9639,12 @@ a.text-dark:hover, a.text-dark:focus {
   line-height: 3.1rem;
 }
 
+.view-demo-a {
+  font-weight: bolder;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
 .view-demo:hover {
   color: #f8f9fa;
 }
