button to links components

--- a/mp/scss/freelancer.scss
+++ b/mp/scss/freelancer.scss
@@ -10,7 +10,7 @@
 // Import components styles
 @import "components/divider.scss";
 @import "components/buttons.scss";
-
+@import "components/links.scss";
 
 // Import layout styles
 @import "layout/navbar.scss";
